--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,9 @@
 # main links
 main:
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
   - title: "Sample Posts"
     url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Sample Collections"
+    url: /collection-archive/
+  - title: "About"
+    url: /About/
 
