--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,9 @@
 main:
   - title: "Sample Posts"
     url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "About"
-    url: /About/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "About"
+  #   url: /About/
+  #
 
