--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /home/
   - title: "Sample Posts"
     url: /year-archive/
+  - title: "Sample Tags"
+    url: /tag-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "About"
