--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /tag-archive/
   - title: "Sample Categories"
     url: /category-archive/
+  - title: "Splash Page"
+    url: /splash-page/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "About"
