--- a/_config.yml
+++ b/_config.yml
@@ -256,6 +256,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jekyll-archives
+  - jekyll-seo-tag
 
 # mimic GitHub Pages with --safe
 whitelist:
