--- a/_config.yml
+++ b/_config.yml
@@ -294,6 +294,12 @@ jekyll-archives:
     category: /categories/:name/
     tag: /tags/:name/
 
+# collections: https://jekyllrb.com/docs/collections/
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 # HTML Compression
 # - https://jch.penibelst.de/
 compress_html:
@@ -314,3 +320,11 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
