--- a/_config.yml
+++ b/_config.yml
@@ -328,3 +328,10 @@ defaults:
       layout: single
       author_profile: false
       share: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
