add plugins in config jemoji

--- a/_config.yml
+++ b/_config.yml
@@ -257,6 +257,7 @@ plugins:
   - jekyll-include-cache
   - jekyll-archives
   - jekyll-seo-tag
+  - jemoji
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -265,6 +266,8 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jemoji
+  - jekyll-seo-tag
 
 # Archives
 #  Type
