add test collections: pets, recipe

--- a/_config.yml
+++ b/_config.yml
@@ -302,6 +302,12 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  recipes:
+    output: true
+    permalink: /:collection/:path/
+  pets:
+    output: true
+    permalink: /:collection/:path/
 
 # HTML Compression
 # - https://jch.penibelst.de/
@@ -331,6 +337,24 @@ defaults:
       layout: single
       author_profile: false
       share: true
+  # _recipes
+  - scope:
+      path: ""
+      type: recipes
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _pets
+  - scope:
+      path: ""
+      type: pets
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
   # _pages
   - scope:
       path: ""
