--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ subtitle: "Version 0.1" # site tagline that appears below site title in masthead
 name: "Aminer"
 description: "不积硅步，无以至千里"
 url: "https://shifengren.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "aminer" # the subpath of your site, e.g. "/blog"
-repository: "shifengren/shifengren.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+baseurl: "" # the subpath of your site, e.g. "/blog"
+repository: "" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
