--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ url: "https://shifengren.github.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. "/blog"
 repository: "shifengren/shifengren.github.io/" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: "/assets/images/500x300.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: "/assets/images/88x88.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title: "my_masthead" # overrides the website title displayed in the masthead, use " " for no title
+logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: # true, false (default)
 words_per_minute: 200
-enable_copy_code_button: # true, false (default)
+enable_copy_code_button: true # true, false (default)
 copyright: # "copyright" name, defaults to site.title
 copyright_url: # "copyright" URL, defaults to site.url
 comments:
@@ -329,6 +329,7 @@ defaults:
       comments: # true
       share: true
       related: true
+      show_date: true
   # _portfolio
   - scope:
       path: ""
