--- a/_config.yml
+++ b/_config.yml
@@ -280,10 +280,10 @@ whitelist:
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
 category_archive:
-  type: liquid
+  type: jekyll-archives #liquid
   path: /categories/
 tag_archive:
-  type: liquid
+  type: jekyll-archives # liquid
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
 jekyll-archives:
