--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale: "zh-CN"
 rtl: # true, false (default) # turns direction of the page into right to left for RTL languages
 title: "科学道场"
 title_separator: "-"
-subtitle: "Version 0.1" # site tagline that appears below site title in masthead
+subtitle: "" # site tagline that appears below site title in masthead
 name: "AMiner"
 description: "不积硅步，无以至千里"
 url: "https://shifengren.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
