--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
-  - title: "Posts"
+  - title: "Blog"
     url: /year-archive/
-  - title: "Tags"
+  - title: "Archive"
     url: /tags/
-  - title: "Categories"
-    url: /categories/
+  # - title: "Categories"
+  #   url: /categories/
   - title: "About"
     url: /about/
   # - title: "Collections"
