--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme: "mmistakes/minimal-mistakes@@4.26.2"
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale: "zh-CN"
+locale: "en-US" # zh-CN, en-US
 rtl: # true, false (default) # turns direction of the page into right to left for RTL languages
 title: "science dojo"
 title_separator: "-"
