--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ name: "AMiner"
 # description: "A journey of a thousand miles may not be achieved without accumulation of each single step, just as the enormous ocean may not be formed without gathering every brook or stream."
 description: "focus on artificial inteligence, deep learning theory and large language model, and share my pratice experience and summary"
 
-url: "https://shifengren.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://science-dojo.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # the subpath of your site, e.g. "/blog"
-repository: "shifengren/shifengren.github.io/" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser: "/assets/images/500x300.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+repository: "science-dojo/science-dojo.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser: "" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: # true, false (default)
